--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
     border-left: 3px solid #000;
     height: 2050px;
     position: absolute;
-    left: 5%;
+    left: 3%;
 }
 
 .dot{
@@ -162,11 +162,11 @@
 }
 
 .timeline-box{
-    width: 350px;
-    height: 250px;
+    width: 330px;
+    height: 270px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     position: absolute;
-    left: 40px;
+    left: 30px;
 }
 
 .dots{
@@ -411,6 +411,11 @@
         left: 50%;
     }
 
+    .timeline-box{
+        height: 250px;
+        width: 350px;
+    }
+    
     .timeline-box-left{
         position: absolute;
         left: -370px;
@@ -418,6 +423,10 @@
         padding-right: 10px;
     }
 
+    .timeline-box-right{
+        margin-left: 10px;
+    }
+    
     .timeline-date{
         position: absolute;
         top: -5px;
