--- a/style.css
+++ b/style.css
@@ -212,22 +212,21 @@
 }
 
 .projects-box{
-    width: 350px;
-    height: 250px;
     margin: auto;
-    background-color: #F7FB3B;
-    border-radius: 20px;
-    padding: 20px 20px;
+    width: 400px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .projects-head{
-    font-size: 27px;
-    font-weight: bold;
+    font-size: 16px;
+    padding: 15px;
+    text-align: center;
+    background-color: rgb(233, 230, 230);
 }
 
-.projects-body{
-    font-size: 18px;
-    padding-top: 10px;
+.projects-box img{
+    width: 100%;
+    height: auto;
 }
 
 .footer{
@@ -474,13 +473,11 @@
     }
 
     .projects-box{
-        width: 400px;
-        height: 350px;
-        padding: 40px 30px;
+        width: 500px;
     }
 
     .projects-head{
-        font-size: 30px;
+        font-size: 20px;
     }
 
     .projects-body{
